syntax = "proto3";


package tts_audio;


service ProtoAudio {
    rpc StreamAudio (AudioPost) returns (stream AudioResp) {}

    rpc Ping (PingRequest) returns (PingResponse) {}
}

message AudioPost {
    string model = 1;
    string text = 2;
    string voice = 3;
    float speed = 4;
}

message AudioResp {
    bytes data = 1;
}

message PingRequest {
}

message PingResponse {
    string status = 1;
}
